--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -5,10 +5,12 @@
 }
 
 .hero {
-  height: calc(100dvh - 72px);
+  min-height: calc(100dvh - 72px);
   background: linear-gradient(0.1turn, #0005, #0000), url('/img/satellite-image.png');
   background-repeat: no-repeat;
   background-size: cover;
+
+  padding: 1rem 0;
 
   display: flex;
   align-items: center;
