--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -31,6 +31,7 @@
   --ifm-breadcrumb-color-active: #000;
 
   --jezz-cta-link-color: #000;
+  --jezz-home-stripe-color: #a5f3fc;
 
   .pagination-nav__link {
     border: 2px solid #000;
@@ -52,6 +53,7 @@
 
   --jezz-bg-gradient: linear-gradient(170deg, #3f3f46, #27272a);
   --jezz-cta-link-color: --ifm-link-color;
+  --jezz-home-stripe-color: #083344;
 
   .pagination-nav__link {
     border: 2px solid var(--ifm-color-emphasis-300);
