--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -4,7 +4,7 @@
  * work well for content-centric websites.
  */
 
-@import "src/styles/variables.scss";
+@use "./theme";
 
 /* You can override the default Infima variables here. */
 :root {
@@ -63,7 +63,7 @@
 }
 
 .navbar {
-  font-family: $font-mono;
+  font-family: theme.$font-mono;
   font-size: 1.05rem;
 }
 
